--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -12,19 +12,19 @@
       <ul nz-menu style="border: none">
         <li nz-menu-item nzMatchRouter routerLink="overview">
           <span nz-icon nzType="project" nzTheme="outline"></span>
-          <span>项目概况</span>
+          <span>Overview</span>
         </li>
         <li *ngIf="data.kind === 'cms'" nz-menu-item nzMatchRouter routerLink="builders">
           <span nz-icon nzType="layout" nzTheme="outline"></span>
-          <span>内容生成器</span>
+          <span>Builders</span>
         </li>
         <li nz-menu-item nzMatchRouter routerLink="workflows">
           <span nz-icon nzType="schedule" nzTheme="outline"></span>
-          <span>工作流</span>
+          <span>Workflows</span>
         </li>
         <li nz-menu-item nzMatchRouter routerLink="queues">
           <span nz-icon nzType="pull-request" nzTheme="outline"></span>
-          <span>消息队列</span>
+          <span>Queues</span>
         </li>
       </ul>
     </nz-sider>
