--- a/src/app/index/queues/publish/publish.component.html
+++ b/src/app/index/queues/publish/publish.component.html
@@ -1,13 +1,13 @@
 <form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>主题命名</nz-form-label>
+    <nz-form-label nzRequired>Subject</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.subject">
-      <input nz-input formControlName="subject" placeholder="请输入主题命名" />
+      <input nz-input formControlName="subject" placeholder="Please enter the subject" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired> 载荷 </nz-form-label>
-    <nz-form-control nzExtra="*必须使用JSON格式">
+    <nz-form-label nzRequired> Payload </nz-form-label>
+    <nz-form-control nzExtra="*JSON format must be used">
       <nz-code-editor
         style="height: 300px; width: 100%"
         formControlName="payload"
@@ -18,6 +18,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">Submit</button>
 </div>
