--- a/src/app/index/workflows/control/state/state.component.html
+++ b/src/app/index/workflows/control/state/state.component.html
@@ -1,16 +1,16 @@
 <nz-table nzTemplateMode>
   <thead>
     <tr>
-      <th><b>触发事件</b></th>
-      <th nzRight nzWidth="150px"><b>最近调度</b></th>
-      <th nzRight nzWidth="150px"><b>下次调度</b></th>
+      <th><b>Event</b></th>
+      <th nzRight nzWidth="200px"><b>Recent</b></th>
+      <th nzRight nzWidth="200px"><b>Next</b></th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let job of doc.schedule!.jobs; index as i">
       <td [ngSwitch]="job.mode">
         <ng-container *ngSwitchCase="'HTTP'">
-          <nz-tag>网络回调</nz-tag>
+          <nz-tag>URL</nz-tag>
           <a (click)="openLogs(i)">
             <b>{{ job.option.method }}</b>
             {{ job.option.url }}
@@ -20,14 +20,14 @@
       <td>
         <ng-container *ngIf="state && state.jobs[i]!.schedule_state as v">
           <ng-container *ngIf="state.status; else emptyText">
-            {{ v.prev | date: 'yyyy-MM-dd HH:mm:ss' }}
+            {{ v.prev | date: 'medium' }}
           </ng-container>
         </ng-container>
       </td>
       <td>
         <ng-container *ngIf="state && state.jobs[i]!.schedule_state as v">
           <ng-container *ngIf="state.status; else emptyText">
-            {{ v.next | date: 'yyyy-MM-dd HH:mm:ss' }}
+            {{ v.next | date: 'medium' }}
           </ng-container>
         </ng-container>
       </td>
