--- a/src/app/index/builders/schema/schema.component.html
+++ b/src/app/index/builders/schema/schema.component.html
@@ -2,9 +2,8 @@
   <nz-page-header-title>{{ data?.name }}</nz-page-header-title>
   <nz-page-header-tags>
     <nz-tag nzColor="blue" [ngSwitch]="data?.kind">
-      <ng-container *ngSwitchCase="'collection'"> 集合类型</ng-container>
-      <ng-container *ngSwitchCase="'single'"> 单一类型</ng-container>
-      <ng-container *ngSwitchCase="'manual'"> 自定义</ng-container>
+      <ng-container *ngSwitchCase="'collection'"> Collection</ng-container>
+      <ng-container *ngSwitchCase="'single'"> Single</ng-container>
     </nz-tag>
     <nz-tag>
       <span nz-icon nzType="database" nzTheme="outline"></span>
@@ -12,17 +11,17 @@
     </nz-tag>
   </nz-page-header-tags>
   <nz-page-header-content>
-    {{ data?.description | wpxBlank: '无描述' }}
+    {{ data?.description | wpxBlank: 'None' }}
   </nz-page-header-content>
   <nz-page-header-extra>
     <nz-space>
       <button *nzSpaceItem nz-button (click)="openField()">
         <span nz-icon nzType="plus" nzTheme="outline"></span>
-        新增字段
+        Create Field
       </button>
       <button *nzSpaceItem nz-button nzType="primary">
         <span nz-icon nzType="check" nzTheme="outline"></span>
-        更新
+        Publish
       </button>
     </nz-space>
   </nz-page-header-extra>
@@ -37,8 +36,8 @@
             <i nz-icon nzType="holder"></i>
           </button>
         </th>
-        <th nzWidth="360px"><b>字段名称</b></th>
-        <th><b>详情</b></th>
+        <th nzWidth="360px"><b>Field Name</b></th>
+        <th><b>Detail</b></th>
         <th nzRight nzWidth="60px">
           <button nz-button nzType="text" disabled>
             <span nz-icon nzType="setting" nzTheme="outline"></span>
@@ -65,8 +64,8 @@
           </button>
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu>
-              <li nz-menu-item (click)="openField(field)"> 修改 </li>
-              <li nz-menu-item nzDanger (click)="delete(field)"> 删除 </li>
+              <li nz-menu-item (click)="openField(field)"> Modify </li>
+              <li nz-menu-item nzDanger (click)="delete(field)"> Delete </li>
             </ul>
           </nz-dropdown-menu>
         </td>
