--- a/src/app/index/queues/detail/detail.component.html
+++ b/src/app/index/queues/detail/detail.component.html
@@ -8,9 +8,8 @@
           nz-button
           nzType="primary"
           nzShape="circle"
-          nz-tooltip="同步"
           nz-popconfirm
-          nzPopconfirmTitle="您确定要同步队列吗?"
+          nzPopconfirmTitle="Are you sure you want to synchronize the queue?"
           (nzOnConfirm)="sync()"
         >
           <span nz-icon nzType="sync" nzTheme="outline"></span>
@@ -22,46 +21,46 @@
   <nz-content style="overflow: hidden auto">
     <nz-card *ngIf="info">
       <nz-descriptions nzLayout="vertical" [nzColumn]="3">
-        <nz-descriptions-item nzTitle="主题" [nzSpan]="3">
+        <nz-descriptions-item nzTitle="Subjects" [nzSpan]="3">
           <nz-space nzAlign="center" nzWrap>
             <ng-container *ngFor="let x of info.config.subjects">
               <a *nzSpaceItem (click)="openPublish(x)">{{ x }}</a>
             </ng-container>
           </nz-space>
         </nz-descriptions-item>
-        <nz-descriptions-item nzTitle="最大消息数">
+        <nz-descriptions-item nzTitle="Max Msgs">
           <ng-container *ngIf="info.config.max_msgs !== -1; else unlimitedText">
             {{ info.config.max_msgs }}
           </ng-container>
         </nz-descriptions-item>
-        <nz-descriptions-item nzTitle="最大字节数">
+        <nz-descriptions-item nzTitle="Max bytes">
           <ng-container *ngIf="info.config.max_bytes !== -1; else unlimitedText">
             {{ info.config.max_bytes | nzBytes }}
           </ng-container>
         </nz-descriptions-item>
-        <nz-descriptions-item nzTitle="有效期">
+        <nz-descriptions-item nzTitle="Max Age">
           <ng-container *ngIf="info.config.max_age !== 0; else unlimitedText">
-            {{ info.config.max_age / 1e9 }}s
+            {{ info.config.max_age / 1e9 }} sec
           </ng-container>
         </nz-descriptions-item>
-        <nz-descriptions-item nzTitle="描述" [nzSpan]="2">{{ info.config.description }}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="创建时间">
-          {{ info.created | date: 'yyyy-MM-dd HH:mm:ss' }}
+        <nz-descriptions-item nzTitle="Description" [nzSpan]="2">{{ info.config.description }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Create Time">
+          {{ info.created | date: 'medium' }}
         </nz-descriptions-item>
       </nz-descriptions>
-      <nz-divider nzPlain nzText="实时状态" nzOrientation="left"></nz-divider>
+      <nz-divider nzPlain nzText="Real-time Status" nzOrientation="left"></nz-divider>
       <nz-descriptions nzLayout="vertical" [nzColumn]="3">
-        <nz-descriptions-item nzTitle="消息数">{{ info.state.messages }}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="消息大小">{{ info.state.bytes | nzBytes }}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="活跃消费者">{{ info.state.consumer_count }}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="第一序列">{{ info.state.first_seq }}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="最后序列">{{ info.state.last_seq }}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="最后发布">
-          {{ info.state.last_ts | date: 'yyyy-MM-dd HH:mm:ss' }}
+        <nz-descriptions-item nzTitle="Messages">{{ info.state.messages }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Bytes">{{ info.state.bytes | nzBytes }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Consumer Count">{{ info.state.consumer_count }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="First Seq">{{ info.state.first_seq }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Last Seq">{{ info.state.last_seq }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Lats Ts">
+          {{ info.state.last_ts | date: 'medium' }}
         </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
   </nz-content>
 </nz-layout>
 
-<ng-template #unlimitedText>无限制</ng-template>
+<ng-template #unlimitedText>Unlimited</ng-template>
