--- a/src/app/index/queues/form/form.component.html
+++ b/src/app/index/queues/form/form.component.html
@@ -2,41 +2,41 @@
   <nz-row [nzGutter]="24">
     <nz-col [nzSpan]="16">
       <nz-form-item>
-        <nz-form-label nzRequired>队列名称</nz-form-label>
+        <nz-form-label nzRequired>Queue Name</nz-form-label>
         <nz-form-control nzHasFeedback [nzAutoTips]="tips.name">
-          <input nz-input formControlName="name" placeholder="请输入队列名称" />
+          <input nz-input formControlName="name" placeholder="Please enter the queue name" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label nzRequired>队列主题</nz-form-label>
+        <nz-form-label nzRequired>Queue Subjects</nz-form-label>
         <nz-form-control nzHasFeedback [nzAutoTips]="tips.subjects">
-          <nz-select nzMode="tags" nzPlaceHolder="请输入队列主题" formControlName="subjects">
+          <nz-select nzMode="tags" nzPlaceHolder="Please enter the queue subjects" formControlName="subjects">
             <nz-option *ngFor="let v of form.get('subjects')?.value" [nzLabel]="v" [nzValue]="v"></nz-option>
           </nz-select>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label>队列描述</nz-form-label>
+        <nz-form-label>Description</nz-form-label>
         <nz-form-control nzHasFeedback>
-          <textarea nz-input rows="4" formControlName="description" placeholder="描述一段队列功能"></textarea>
+          <textarea nz-input rows="4" formControlName="description" placeholder="Describe a function"></textarea>
         </nz-form-control>
       </nz-form-item>
     </nz-col>
     <nz-col [nzSpan]="8">
       <nz-form-item>
-        <nz-form-label nzTooltipTitle="-1 代表无限制">最大消息数</nz-form-label>
+        <nz-form-label nzTooltipTitle="-1 is unlimited">Max Msgs</nz-form-label>
         <nz-form-control>
           <nz-input-number style="width: 100%" formControlName="max_msgs" [nzMin]="-1" [nzStep]="1"></nz-input-number>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label nzTooltipTitle="-1 代表无限制">最大字节数</nz-form-label>
+        <nz-form-label nzTooltipTitle="-1 is unlimited">Max Bytes</nz-form-label>
         <nz-form-control>
           <nz-input-number style="width: 100%" formControlName="max_bytes" [nzMin]="-1" [nzStep]="1"></nz-input-number>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label>存储周期</nz-form-label>
+        <nz-form-label>Max Age</nz-form-label>
         <nz-form-control>
           <nz-input-number
             style="width: 100%"
@@ -52,6 +52,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">Submit</button>
 </div>
